--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "c-type-util": "^3.0.0"
+    "c-type-util": "^3.0.0",
+    "joi": "^17.4.2"
   },
   "jest": {
     "transform": {
