--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bench": "npx ts-node src/benchmarking/idlookup.bench.ts",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +14,14 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
     "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/benchmark": "^2.1.1",
+    "benchmark": "^2.1.4",
     "c-type-util": "^3.0.0",
     "joi": "^17.4.2"
   },
