--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "lib": [
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015.iterable"
+    ]
   },
   "include": [
     "src"
