--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@types/benchmark": "^2.1.1",
+    "@types/binary-parser": "^1.5.1",
     "benchmark": "^2.1.4",
+    "binary-parser": "^2.0.2",
     "c-type-util": "^3.0.0",
     "joi": "^17.4.2"
   },
