--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "benchmark": "^2.1.4",
     "binary-parser": "^2.0.2",
     "c-type-util": "^3.0.0",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "smart-buffer": "^4.2.0"
   },
   "jest": {
     "transform": {
