--- a/package.json
+++ b/package.json
@@ -15,20 +15,18 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
+    "@types/benchmark": "^2.1.1",
+    "@types/binary-parser": "^1.5.1",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "benchmark": "^2.1.4"
   },
   "dependencies": {
-    "@types/benchmark": "^2.1.1",
-    "@types/binary-parser": "^1.5.1",
-    "benchmark": "^2.1.4",
     "binary-parser": "^2.0.2",
-    "c-type-util": "^3.0.0",
-    "joi": "^17.4.2",
-    "smart-buffer": "^4.2.0"
+    "joi": "^17.4.2"
   },
   "files": [
     "dist/**/*"
