--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "daq-parse-libv2",
   "version": "1.0.0",
   "description": "Parser for CP Baja's data format.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "bench": "npx ts-node src/benchmarking/idlookup.bench.ts",
     "dev": "nodemon",
-    "build": "tsc src"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +29,7 @@
     "joi": "^17.4.2"
   },
   "files": [
-    "dist/**/*"
+    "./dist/**/*"
   ],
   "prepare": "npm run build",
   "jest": {
