--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "bench": "npx ts-node src/benchmarking/idlookup.bench.ts",
     "dev": "nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "install": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -28,9 +29,6 @@
     "binary-parser": "^2.0.2",
     "joi": "^17.4.2"
   },
-  "files": [
-    "./dist/**/*"
-  ],
   "prepare": "npm run build",
   "jest": {
     "transform": {
